# rome-dex

./: .gitignore  AGENTS.md  NOTICE  README.md
app/: .gitignore  TESTING.md  chains.yaml  package-lock.json  package.json  playwright.config.ts
clmm/: Cargo.toml
clmm/proptest-regressions/: engine.txt
clmm/src/: engine.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
clmm/src/curve/: fee_math.rs  liquidity_math.rs  mod.rs  props.rs  swap_math.rs  tick_math.rs
contracts/: foundry.toml
design/: README.md  connect.html  liquidity.html  pool.html  swap.html
farm/: Cargo.toml  program-id.md
harness/: alt.json  build-app-pools.mjs  clmm-create-pool.test.mjs  clmm-evm.test.mjs  clmm-msol.json  clmm-real.json  clmm-router.json  clmm.json  clmm.test.mjs  create-alt.mjs  create-pool-app-path.test.mjs  create-pool.mjs  create-pool2.mjs  create-real-pair-eth.mjs  create-real-pool.mjs  create-real-tiered-pools.mjs  create-simple-pool.test.mjs  create-tiered-pools.mjs  deploy-clmm-router.mjs  deploy-router.mjs  dex.test.mjs  dual-lane-swap.mjs  farm-evm-setup.test.mjs  farm.json  farm.test.mjs  full-parity.mjs  fund-wallet.mjs  helper-abi.test.mjs  indexer.test.mjs  keeper.mjs  keeper.test.mjs  lib.mjs  measure-alt-collapse.mjs  newuser-gaps.test.mjs  newuser.test.mjs  oracle.test.mjs  orders-cancel-newuser.test.mjs  orders-close.test.mjs  orders-newuser.test.mjs  orders.test.mjs  (+21 more)
orders/: .gitignore  Cargo.toml  README.md
orders/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/: Cargo.toml
(+147 files in other folders)
