[package]
name = "rome-dex-clmm"
version = "0.1.0"
description = "Rome DEX concentrated-liquidity AMM — purpose-built lean native CLMM, dual-lane (Solana + EVM-via-CPI), authority-agnostic, PDA positions"
authors = ["Rome Protocol"]
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.9"
solana-program = "2.1.0"
spl-math = { version = "0.3", features = ["no-entrypoint"] }
uint = "0.9.5"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
thiserror = "2.0"

[dev-dependencies]
solana-sdk = "2.1.0"
proptest = "1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
