[package]
name = "rome-dex-orders"
version = "0.1.0"
description = "Rome DEX limit-order + DCA program — permissionless keeper execution, dual-lane (Solana + EVM-via-CPI), authority-agnostic"
authors = ["Rome Protocol"]
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.9"
solana-program = "2.1.0"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
thiserror = "2.0"

[dev-dependencies]
solana-sdk = "2.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
